# EIDRA

quant_macro_operating_system/: .env.example  .gitignore  ARCHITECTURE.md  BOOTSTRAP.md  DATA_CONTRACTS.md  DEVELOPMENT_WORKFLOW.md  Makefile  PROJECT_ROADMAP.md  README.md  pyproject.toml  requirements.txt  run_control_plane.py
quant_macro_operating_system/00_governance/: adr_governance_policy.md  agent_command_protocol_v55.md  artifact_integrity_policy_v55.md  council_invocation_standard_v56.md  council_response_protocol_v56.md  dependency_graph.md  document_precedence.md  founder_authority_precedence_v56.md  glossary.md  implementation_roadmap.md  organizational_layers.md  organizational_model.md  organizational_precedence.md  organizational_structure_v55.md  pre_setup_audit_report.md  release_process.md  repository_standards.md  review_cadence.md  runtime_artifact_policy.md  system_map.md  versioning_policy.md
quant_macro_operating_system/01_constitutions/: system_constitution.md
quant_macro_operating_system/04_ledgers_and_registries/: README.md  alpha_registry_spec.md  decision_ledger_spec.md  evidence_ledger_spec.md  execution_registry_spec.md  failure_registry_spec.md  feature_registry_spec.md  memory_registry_spec.md  performance_registry_spec.md  portfolio_registry_spec.md  regime_registry_spec.md  risk_registry_spec.md  scenario_registry_spec.md
quant_macro_operating_system/05_architecture/: data_product_architecture.md  lakehouse_architecture.md  metadata_architecture.md  orchestration_architecture.md  organizational_architecture.md  system_blueprint.md  (+8 more)
(+518 files in other folders)
